--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/vue": "^7.0.0",
-    "@ionic/vue-router": "^7.0.0",
+    "@firebase/auth": "^1.7.0",
+    "@firebase/firestore": "^4.5.1",
+    "@ionic/vue": "^5.9.4",
+    "@ionic/vue-router": "^5.9.4",
+    "@types/firebase": "^3.2.1",
+    "firebase": "^8.10.1",
+    "firebase-auth": "^0.1.2",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
@@ -34,7 +39,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.4.4",
     "vite": "^5.0.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.0.24"
