--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor-community/admob": "^5.3.1",
     "@capacitor/android": "^5.7.4",
     "@capacitor/app": "5.0.7",
-    "@capacitor/core": "5.7.4",
+    "@capacitor/core": "^5.7.4",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
